# nng-2015-hableany

./: CMakeLists.txt  README.md  game.txt
Client/: Client.cpp  Client.h  Client.vcproj  MyClient.cpp  parser.cpp  parser.h  stdafx.h
src/: Client.cpp  Client.h  MyClient.cpp  MyClient.h  State.cpp  State.h  app.cpp  app.hpp  parser.cpp  parser.h
test/: test.cpp
web/Alap/: alap.html
